make some client connections to channels